--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
+    "@types/react-resizable": "3.0.2",
     "axios": "^1.3.5",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
@@ -19,6 +20,7 @@
     "prettier": "^2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-resizable": "3.0.4",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
