--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
+    "@types/react-redux": "7.1.25",
     "@types/react-resizable": "3.0.2",
+    "@uiw/react-md-editor": "2.1.1",
     "axios": "^1.3.5",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
@@ -20,8 +22,11 @@
     "prettier": "^2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "8.0.5",
     "react-resizable": "3.0.4",
     "react-scripts": "5.0.1",
+    "redux": "4.2.1",
+    "redux-thunk": "2.3.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
