--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/react-redux": "7.1.25",
     "@types/react-resizable": "3.0.2",
     "@uiw/react-md-editor": "2.1.1",
-    "axios": "^1.3.5",
+    "axios": "0.21.1",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
     "localforage": "^1.10.0",
