--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "0.21.1",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
+    "immer": "^10.0.1",
     "localforage": "^1.10.0",
     "prettier": "^2.8.7",
     "react": "^18.2.0",
